<resources>
    <string name="app_name">My Calculator</string>
    <string name="MyResource">Моя кнопка</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="parentheses">()</string>
    <string name="percent">%</string>
    <string name="div">/</string>
    <string name="multi">*</string>
    <string name="subst">-</string>
    <string name="add">+</string>
    <string name="equally">=</string>
    <string name="sign">+/-</string>
    <string name="separator">,</string>
    <string name="_0">0</string>
</resources>